--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
   <link rel="icon" href="/src/static/icons/favicon.png">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
+  
   <title>Omi</title>
 </head>
 <body>
